--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ hr {
 	min-height: 100%; width: 1024px;
 	height: 100%;
 	margin: 0 auto;
+	margin-bottom: 40px;
 }
 
 /* -==| Estilos da home |==- */
